--- a/projects/index.html
+++ b/projects/index.html
@@ -19,26 +19,26 @@
       }
   </style>
 
-  <title>miked.codes - </title>
+  <title>miked.codes - Projects</title>
 </head>
 <body>
   <header id="main-header">
     <nav role="navigation"><a  href="/">
         Home
+      </a><a  href="/explore/">
+        Explore
       </a><a  href="/blog/">
         Writing
-      </a><a  aria-current="page" class="current" href="/projects/">
-        
-      </a><a  href="/work/">
-        
       </a></nav>
     <nav class="social">
     </nav>
   </header>
   <section id="main-section">
     <header id="hero">
-  <p class="faded">
-    I have various passion projects on the side. It's how I learn new things and explore. These are some of my latest projects.
+  <p>
+    <strong class="faded">
+      These are some of my latest projects.
+    </strong>
   </p>
 </header>
 
@@ -50,5 +50,6 @@
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/prism.min.js" integrity="sha512-RDQSW3KoqJMiX0L/UBgwBmH1EmRYp8LBOiLaA8rBHIy+7OGP/7Gxg8vbt8wG4ZYd29P0Fnoq6+LOytCqx3cyoQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/plugins/autoloader/prism-autoloader.min.js" integrity="sha512-fTl/qcO1VgvKtOMApX2PdZzkziyr2stM65GYPLGuYMnuMm1z2JLJG6XVU7C/mR+E7xBUqCivykuhlzfqxXBXbg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="/scripts/app.js"></script>
 </body>
 </html>
