--- a/explore/index.html
+++ b/explore/index.html
@@ -23,21 +23,25 @@
 </head>
 <body>
   <header id="main-header">
-    <nav role="navigation"><a  href="/">
+    <nav id="site" role="navigation"><a  href="/">
         Home
       </a><a  aria-current="page" class="current" href="/explore/">
         Explore
       </a><a  href="/blog/">
         Writing
       </a></nav>
-    <nav class="social">
+    <nav id="social">
+      <a target="_blank" class="mastodon" href="https://tech.lgbt/@miked" alt="Mastodon"><img src="/images/social/mastodon.svg"></a>
+      <a target="_blank" class="twitter" href="https://twitter.com/miked" alt="Twitter"><img src="/images/social/icons8-twitter.svg"></a>
+      <a target="_blank" class="github" href="https://github.com/mike-douglas" alt="Github"><img src="/images/social/icons8-github.svg"></a>
+      <a target="_blank" class="instagram" href="https://instragram.com/thisismiked" alt="Instagram"><img src="/images/social/icons8-instagram.svg"></a>
     </nav>
   </header>
   <section id="main-section">
     <header id="hero">
   <p>
     <strong class="faded">
-      This is where I share interesting links and things I'm reading at the moment.
+      This is my link feed.
     </strong>
   </p>
 </header>
