deploy: 9a35af9d8e3078dd5ad070308beba178531da304

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
     </strong>
   </p>
   <p>
-    Thanks for stopping by. <span class="inline-portrait"></span>
+    Thanks for visiting.
+  </p>
+  <p>
+    <center><span class="inline-portrait"></span></center>
   </p>
 </header>
 
