deploy: 84780ffa1cb6bd1b0371b6ca3328b7867e9adb0a

--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="/css/style.css">
+  <meta name="description" content="Mike is an engineering manager currently working at Dropbox.">
 
-  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:site" content="@miked" />
+  <meta property="twitter:title" content="Mike D." />
+  <meta property="twitter:description" content="Mike is an engineering manager currently working at Dropbox." />
   
+  <meta property="twitter:image" content="https://miked.codes/images/large-card-default.jpeg" />
+  
+
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Mike D." />
+  <meta property="og:description" content="Mike is an engineering manager currently working at Dropbox." />
+  <meta property="og:url" content="https://miked.codes/" />
+  
+  <meta property="og:image" content="https://miked.codes/images/large-card-default.jpeg" />
+  
+
+  <link rel="stylesheet" href="/css/style.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/themes/prism-tomorrow.min.css" integrity="sha512-vswe+cgvic/XBoF1OcM/TeJ2FW0OofqAVdCZiEYkd6dwGXthvkSFWOoGGJgS2CW70VK5dQM5Oh+7ne47s74VTg==" crossorigin="anonymous" referrerpolicy="no-referrer">
 
@@ -19,7 +34,7 @@
       }
   </style>
 
-  <title>miked.codes - Home</title>
+  <title>miked.codes: Mike D.</title>
 </head>
 <body>
   <header id="main-header">
@@ -28,8 +43,13 @@
       </a><a  href="/explore/">
         Explore
       </a><a  href="/blog/">
-        Writing
+        Archive
+      </a><a  href="/work/">
+        Work
       </a></nav>
+    <div class="right">
+      <span class="portrait"></span>
+    </div>
   </header>
   <section id="main-section">
     <header id="hero">
@@ -44,9 +64,6 @@
   <p>
     Thanks for visiting.
   </p>
-  <p>
-    <center><span class="inline-portrait"></span></center>
-  </p>
 </header>
 
   </section>
@@ -58,7 +75,7 @@
       <a target="_blank" class="instagram" href="https://instagram.com/thisismiked" alt="Instagram"><img src="/images/social/icons8-instagram.svg"></a>
     </nav>
     <center>
-      ✨
+      <h1>✨</h1>
     </center>
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/prism.min.js" integrity="sha512-RDQSW3KoqJMiX0L/UBgwBmH1EmRYp8LBOiLaA8rBHIy+7OGP/7Gxg8vbt8wG4ZYd29P0Fnoq6+LOytCqx3cyoQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
