--- a/projects/index.html
+++ b/projects/index.html
@@ -6,10 +6,21 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="/css/style.css">
+  <meta name="description" content="Side projects and links to things that I&#39;ve done.">
 
-  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:site" content="@miked" />
+  <meta property="twitter:title" content="Projects" />
+  <meta property="twitter:description" content="Side projects and links to things that I&#39;ve done." />
   
+
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Projects" />
+  <meta property="og:description" content="Side projects and links to things that I&#39;ve done." />
+  <meta property="og:url" content="https://miked.codes/" />
+  
+
+  <link rel="stylesheet" href="/css/style.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/themes/prism-tomorrow.min.css" integrity="sha512-vswe+cgvic/XBoF1OcM/TeJ2FW0OofqAVdCZiEYkd6dwGXthvkSFWOoGGJgS2CW70VK5dQM5Oh+7ne47s74VTg==" crossorigin="anonymous" referrerpolicy="no-referrer">
 
@@ -19,7 +30,7 @@
       }
   </style>
 
-  <title>miked.codes - Projects</title>
+  <title>miked.codes: Projects</title>
 </head>
 <body>
   <header id="main-header">
@@ -28,16 +39,23 @@
       </a><a  href="/explore/">
         Explore
       </a><a  href="/blog/">
-        Writing
+        Archive
+      </a><a  href="/work/">
+        Work
       </a></nav>
+    <div class="right">
+      <span class="portrait"></span>
+    </div>
   </header>
   <section id="main-section">
-    <header>
+    
+<header id="section-header">
   <h1>Projects</h1>
   <p>
-    Side projects and links to things that I've done.
+    Side projects and links to things that I&#39;ve done.
   </p>
 </header>
+
 
   </section>
   <footer>
@@ -48,7 +66,7 @@
       <a target="_blank" class="instagram" href="https://instagram.com/thisismiked" alt="Instagram"><img src="/images/social/icons8-instagram.svg"></a>
     </nav>
     <center>
-      ✨
+      <h1>✨</h1>
     </center>
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/prism.min.js" integrity="sha512-RDQSW3KoqJMiX0L/UBgwBmH1EmRYp8LBOiLaA8rBHIy+7OGP/7Gxg8vbt8wG4ZYd29P0Fnoq6+LOytCqx3cyoQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
