--- a/work/index.html
+++ b/work/index.html
@@ -6,10 +6,21 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="/css/style.css">
+  <meta name="description" content="I am an engineering leader that loves to build teams that make awesome things.">
 
-  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:site" content="@miked" />
+  <meta property="twitter:title" content="Work" />
+  <meta property="twitter:description" content="I am an engineering leader that loves to build teams that make awesome things." />
   
+
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Work" />
+  <meta property="og:description" content="I am an engineering leader that loves to build teams that make awesome things." />
+  <meta property="og:url" content="https://miked.codes/" />
+  
+
+  <link rel="stylesheet" href="/css/style.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/themes/prism-tomorrow.min.css" integrity="sha512-vswe+cgvic/XBoF1OcM/TeJ2FW0OofqAVdCZiEYkd6dwGXthvkSFWOoGGJgS2CW70VK5dQM5Oh+7ne47s74VTg==" crossorigin="anonymous" referrerpolicy="no-referrer">
 
@@ -19,7 +30,7 @@
       }
   </style>
 
-  <title>miked.codes - Work</title>
+  <title>miked.codes: Work</title>
 </head>
 <body>
   <header id="main-header">
@@ -28,17 +39,27 @@
       </a><a  href="/explore/">
         Explore
       </a><a  href="/blog/">
-        Writing
+        Archive
+      </a><a  aria-current="page" class="current" href="/work/">
+        Work
       </a></nav>
+    <div class="right">
+      <span class="portrait"></span>
+    </div>
   </header>
   <section id="main-section">
-    <header id="hero">
+    
+<header id="section-header">
+  <h1>Work</h1>
   <p>
-    <strong class="faded">
-      TBD Here.
-    </strong>
+    I am an engineering leader that loves to build teams that make awesome things.
   </p>
 </header>
+
+<p>I currently work at <a href="https://dropbox.com">Dropbox</a>, where most recently I'm building a new team to drive growth in some of our newest initiatives. We're unlocking the potential of our newest products for our users and it's super cool.</p>
+<p>I'm a productivity nerd and product engineer that loves to build things that make people happy by helping them get things done so they can focus on what's really important. At Dropbox I previously worked on <a href="https://dropbox.com/paper">Dropbox Paper</a> leading a team building new and enhancing existing features of the collaborative editor.</p>
+<p>The social side of software engineering excites me. I'm passionate about bringing people together from different perspectives and experiences to build something that makes lives better. Dropbox's mission is to &quot;design a more enlightnend way of working&quot; and this really resonates with me as a technologist and a leader.</p>
+<p>For more about my experience take a look at <a href="https://standardresume.co/r/mike-douglas">resume</a>.</p>
 
   </section>
   <footer>
@@ -49,7 +70,7 @@
       <a target="_blank" class="instagram" href="https://instagram.com/thisismiked" alt="Instagram"><img src="/images/social/icons8-instagram.svg"></a>
     </nav>
     <center>
-      ✨
+      <h1>✨</h1>
     </center>
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/prism.min.js" integrity="sha512-RDQSW3KoqJMiX0L/UBgwBmH1EmRYp8LBOiLaA8rBHIy+7OGP/7Gxg8vbt8wG4ZYd29P0Fnoq6+LOytCqx3cyoQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
