deploy: be03b8976e050056774b0c04a6d60d9de591202f

--- a/explore/index.html
+++ b/explore/index.html
@@ -13,11 +13,15 @@
   <meta property="twitter:title" content="Quick Links" />
   <meta property="twitter:description" content="Bookmarks that I find interesting, updated throughout the day." />
   
+  <meta property="twitter:image" content="https://miked.codes/images/large-card-default.jpeg" />
+  
 
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Quick Links" />
   <meta property="og:description" content="Bookmarks that I find interesting, updated throughout the day." />
   <meta property="og:url" content="https://miked.codes/" />
+  
+  <meta property="og:image" content="https://miked.codes/images/large-card-default.jpeg" />
   
 
   <link rel="stylesheet" href="/css/style.css">
