--- a/projects/index.html
+++ b/projects/index.html
@@ -13,11 +13,15 @@
   <meta property="twitter:title" content="Projects" />
   <meta property="twitter:description" content="Side projects and links to things that I&#39;ve done." />
   
+  <meta property="twitter:image" content="https://miked.codes/images/large-card-default.jpeg" />
+  
 
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Projects" />
   <meta property="og:description" content="Side projects and links to things that I&#39;ve done." />
   <meta property="og:url" content="https://miked.codes/" />
+  
+  <meta property="og:image" content="https://miked.codes/images/large-card-default.jpeg" />
   
 
   <link rel="stylesheet" href="/css/style.css">
