--- a/work/index.html
+++ b/work/index.html
@@ -13,11 +13,15 @@
   <meta property="twitter:title" content="Work" />
   <meta property="twitter:description" content="I am an engineering leader that loves to build teams that make awesome things." />
   
+  <meta property="twitter:image" content="https://miked.codes/images/large-card-default.jpeg" />
+  
 
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Work" />
   <meta property="og:description" content="I am an engineering leader that loves to build teams that make awesome things." />
   <meta property="og:url" content="https://miked.codes/" />
+  
+  <meta property="og:image" content="https://miked.codes/images/large-card-default.jpeg" />
   
 
   <link rel="stylesheet" href="/css/style.css">
