deploy: 0d5aab5e28ac286b8cf94c4b2eae1ec3514d20b0

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:site" content="@miked" />
-  <meta property="twitter:title" content="Mike D." />
+  <meta property="twitter:title" content="Hello, I&#39;m Mike" />
   <meta property="twitter:description" content="Mike is an engineering manager currently working at Dropbox." />
   
   <meta property="twitter:image" content="https://miked.codes/images/large-card-default.jpeg" />
   
 
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Mike D." />
+  <meta property="og:title" content="Hello, I&#39;m Mike" />
   <meta property="og:description" content="Mike is an engineering manager currently working at Dropbox." />
   <meta property="og:url" content="https://miked.codes/" />
   
@@ -34,7 +34,7 @@
       }
   </style>
 
-  <title>miked.codes: Mike D.</title>
+  <title>miked.codes: Hello, I&#39;m Mike</title>
 </head>
 <body>
   <header id="main-header">
