--- a/work/index.html
+++ b/work/index.html
@@ -74,6 +74,7 @@
     <nav id="social">
       <a target="_blank" class="mastodon" href="https://masto.ai/@miked" rel="me" alt="Mastodon"><img src="/images/social/mastodon.svg"></a>
       <a target="_blank" class="twitter" href="https://twitter.com/miked" alt="Twitter"><img src="/images/social/icons8-twitter.svg"></a>
+      <a target="_blank" class="atom / rss feed" href="/feed.xml" alt="Atom / RSS Feed"><img src="/images/social/rss-feed.svg"></a>
       <a target="_blank" class="github" href="https://github.com/mike-douglas" alt="Github"><img src="/images/social/icons8-github.svg"></a>
       <a target="_blank" class="instagram" href="https://instagram.com/thisismiked" alt="Instagram"><img src="/images/social/icons8-instagram.svg"></a>
     </nav>
