--- a/work/index.html
+++ b/work/index.html
@@ -6,12 +6,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="description" content="I am an engineering leader that loves to build teams that make awesome things.">
+  <meta name="description" content="I am an engineering leader that loves to build teams and make awesome things.">
 
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:site" content="@miked" />
   <meta property="twitter:title" content="Work" />
-  <meta property="twitter:description" content="I am an engineering leader that loves to build teams that make awesome things." />
+  <meta property="twitter:description" content="I am an engineering leader that loves to build teams and make awesome things." />
   
   
   <meta property="twitter:image" content="https://miked.codes/images/large-card-default.jpeg" />
@@ -20,7 +20,7 @@
 
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Work" />
-  <meta property="og:description" content="I am an engineering leader that loves to build teams that make awesome things." />
+  <meta property="og:description" content="I am an engineering leader that loves to build teams and make awesome things." />
   <meta property="og:url" content="https://miked.codes/" />
   
   
@@ -60,7 +60,7 @@
 <header id="section-header">
   <h1>Work</h1>
   <p>
-    I am an engineering leader that loves to build teams that make awesome things.
+    I am an engineering leader that loves to build teams and make awesome things.
   </p>
 </header>
 
